FusionDev Backup1/src/objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ListCode__c</fullName>
        <label>ListCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__DW_ID__c</fullName>
        <externalId>true</externalId>
        <label>Commerce Cloud ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>All_Price_Books</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>PRICEBOOK2.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Price Books</label>
    </listViews>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>